# mips-simulator

./: CMakeLists.txt  README.md
include/: display.h  instruction_encoder.h  mips_state.h  parser.h  simulator.h  ui.h  utils.h
src/: display.c  instruction_encoder.c  main.c  mips_state.c  parser.c  simulator.c  ui.c  utils.c
